<resources>
    <string name="app_name">simplequiz</string>
    <string name="welcome_to_the_simple_quiz">welcome to the simple quiz</string>
    <string name="chemistry">chemistry</string>
    <string name="math">math</string>
    <string name="physics">physics</string>
    <string name="this_is_math_question">this is math question</string>
    <string name="this_is_physics_question">this is physics question</string>
    <string name="this_is_history_question">this is history question</string>
    <string name="history">history</string>
    <string name="help_give_some_instructions">help_give_some_instructions</string>
    <string name="highest_point">highest_point</string>
    <string name="chemquestion">chemquestion[5qn]</string>
    <string name="choicea">achoice</string>
    <string name="whattosay">In this quiz, you will firstly choose a subject and each subject will have about 20 questions.</string>
    <string-array name="chemquestionarray">{"While traveling, an airplane passenger placed a bag
        of potato chips in his checked luggage. When he opened the luggage, the bag had exploded
        and potato chips were everywhere in his luggage. Which gas law is this an example of?",
        "Consider the following compound: CH4, CH3CH3, CH3CH2Cl and CH3CH2OH, which one has
        the highest boiling point?"}</string-array>
    <string name="rowtext">//////

///</string>
    <string name="next">next</string>
    <integer name="qn">1</integer>
</resources>
